static/css/style.css
/* ... */
.board-photo img {
	width: 100%;
	height: 100%;
}

.board-name {
	font-size: 22px;
	font-weight: 500;
	margin-bottom: 5px;
	color: #000;
}

#location {
	display: grid;
	grid-template-columns: 1fr 1fr;
	grid-gap: 20px;
}

.location-info {
	display:grid;
	grid-template-rows: 1fr 2fr 1fr;
	align-items:center;
	justify-content:center;
	text-align: center;
}

.location-title {
	font-size: 22px; 
	font-weight: 500; 
	margin-bottom: 5px;
	color:#000;
}

.location-address {
	font-size: 18px; 
	color:#444;
}

.location-hours {
	font-size: 18px;
	color:#444;
}

.map-holder {
	background: #fff;
	padding: 5px 5px 5px 5px;
	max-width: 400px;
	width: 100%;
	height: 290px;
	margin: auto;
	border-radius: 7px;
	box-sizing: border-box;
	box-shadow: 0px 0px 1px rgba(0,0,0,0.04), 0px 0px 2px rgba(0,0,0,0.04), 0px 0px 3px rgba(0,0,0,0.02), 0px 0px 5px rgba(0,0,0,0.03);
}

#carousel {
	position: relative;
	z-index: 1;
	margin-top: -135px !important;
}
#footer-background {
  width:100%;
  background-color: black;
}

#footer-holder {
  display: flex;
  flex-direction: row;
  max-width: 960px;
  width:100%;
  margin:auto;
	background: #000;
	margin-top: auto;
	padding: 30px 20px 40px 20px;
	color:#fff;
}


#footer-holder>div {
  display:flex;
  flex-direction:column;
  justify-content: space-between;
  width:60%;
}

#footer-holder>div:last-child {
  width:25%;
}


.copyright {
	font-family: "Rajdhani";
	text-transform: uppercase;
	letter-spacing: 0.8px;
	margin-top: 60px;
	font-size: 14px;
}

.footer-title {
	font-weight: 600;
	margin-bottom: 10px;
	color:#fff;
}

.footer-links {
	line-height: 2;
}

.footer-links a {
	display: block;
	color: rgba(255,255,255,0.8);
}

.footer-links a:hover {
	transition: 0.2s;
	color: rgba(255,255,255,1);
}

.documentary-section {
	padding-top: 0px !important;
	padding-bottom: 60px;
}

.youtube-video {
	width: 100%; 
	height: 400px;
	max-width: 700px; 
	box-sizing: border-box; 
	margin: auto; 
	border-radius: 14px; 
	border: 7px solid #fff; 
	box-shadow: 0px 0px 1px rgba(0,0,0,0.04), 0px 0px 2px rgba(0,0,0,0.04), 0px 0px 3px rgba(0,0,0,0.02), 0px 0px 5px rgba(0,0,0,0.03);
}

.socials {
	display: grid; 
	grid-template-columns: 1fr 1fr 1fr 1fr 1fr; 
	grid-gap: 20px;
	padding: 20px 0px;
}

.social {
	
}

.social img {
	height: 30px;
}



.mobile-donate-button-header {
	background: #018669;
	color: #fff !important;
	padding: 0px 14px;
	border-radius: 14px;
}

.mobile-donate-button {
	background: #018669;
	color: #fff;
	padding: 12px 14px;
	border-radius: 14px;
	display: none;
}

.wide {display:block}
.narrow {display: none}
/* ... */

